--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="bottom_home_item">Accueil</string>
     <string name="bottom_list_item">Liste produits</string>
     <string name="bottom_settings_item">Paramètres</string>
+    <!-- Home Page -->
+    <string name="app_title">SmartFridge</string>
+    <string name="home_first_button">Connecter un SmartFridge</string>
+    <string name="home_second_button">Ajouter un aliment</string>
 </resources>
