ADD : Design page produits
Ce commit contient le design de la page produit (page ou tous les produits seront listés). Il y a également moyen d'afficher cette page suite à ce commit. Cependant, cette page n'est pas encore fonctionelle.
https://trello.com/c/czQVkl30/9-us-02-ajouter-et-supprimer-des-aliments-manuellement

--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -13,6 +13,16 @@
     <string name="temperature">Température</string>
     <string name="hygrometry">Hygrométrie</string>
 
+    <!-- Prduct list page -->
+    <string name="product_page_title">Liste de Produits</string>
+    <string name="product_name">Nom du Produit</string>
+    <string name="product_emplacement">Emplacement</string>
+    <string name="product_expiration_date">1 day</string>
+    <string name="search_hint">Rechercher . . .</string>
+    <string name="sort_product_name_description">Triez selon le nom du produit</string>
+    <string name="sort_location_description">Triez selon l\'emplacement du produit</string>
+    <string name="sort_expiration_period_description">Triez selon la date de péremeption du produit</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
