EDIT : Forms Add Aliment
I have adapted the size of the return button on the product page so that they take the place of request
And the spinners are centered and we have an arrow + text in bold and black

--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -41,7 +41,7 @@
 
     <string name="title_forms_add">Ajouter un Produits</string>
     <string name="text_name">Nom du Produit : </string>
-    <string name="text_quantite">Quantité du produit (GR) : </string>
+    <string name="text_quantite">Quantité du produit                     (gr) </string>
     <string name="text_date">Date de Péremption                          JJ/MM/AAAA </string>
     <string name="text_categorie">Catégorie</string>
     <string name="text_storage">Lieu de Stockage</string>
