EDIT : TextView and Spinner
I change my TextView place for add infos like maximum , unit weight ... and my spinner colors

--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -32,7 +32,7 @@
     <!-- Forms Add Aliment Page -->
 
     <!--  Button  -->
-    <string name="btn_return_product">Ajouter Aliment</string>
+    <string name="btn_return_product">Ajouter un produit</string>
     <string name="btn_date">Choisir Date : </string>
     <string name="btn_add">Ajouter </string>
 
@@ -40,8 +40,10 @@
     <!--  TextView  -->
 
     <string name="title_forms_add">Ajouter un Produits</string>
-    <string name="text_name">Nom du Produit </string>
-    <string name="text_asterisk">*</string>
+    <string name="text_name">Nom du Produit  </string>
+    <string name="text_asterisk" ><font fgcolor='#FF0000'>*</font></string>
+    <string name="text_max_name">max 30 car.</string>
+
 
     <string name="text_quantite">Quantité du produit</string>
     <string name="text_g">g</string>
