--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -108,4 +108,9 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
+    <!-- Strings for setting page -->
+    <string name="settings_main_title">Settings</string>
+    <string name="empty_qr_code">Vous n\'avez pas encore de QR code, veuillez vous inscrire</string>
+    <string name="full_qr_code">Votre QR code</string>
+
 </resources>
