--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -82,6 +82,7 @@
         <item>Matières grasses</item>
         <item>Produits sucrés</item>
         <item>Boissons</item>
+        <item>Autre</item>
     </string-array>
 
     <!-- Place  Spinner -->
