ADD : informations pop-up
Ingredients, nutriscore, brand and ecoscore are now added on the product pop

--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -38,6 +38,16 @@
     <string name="def_category">None</string>
     <string name="product_location_title">Emplacement</string>
     <string name="def_product_location">None</string>
+    <string name="product_ecoscore_title">Ecoscore</string>
+    <string name="def_product_ecoscore">X</string>
+    <string name="product_nutriscore_title">Nutriscore</string>
+    <string name="def_product_nutriscore">X</string>
+    <string name="product_ingredients_title">Ingrédients</string>
+    <string name="def_product_ingredients">Ingrédient a, ingrédient b, ingrédient c</string>
+    <string name="product_brand_title">Marque</string>
+    <string name="def_product_brand">marque</string>
+    <string name="product_period_title">Période d\'Expiration</string>
+    <string name="def_product_period">1 jour</string>
 
     <string name="delete_button">Supprimer</string>
     <string name="modify_button">Modifier</string>
