--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -113,6 +113,7 @@
     <string name="password">Password</string>
     <string name="email">Email</string>
     <string name="title_activity_sign_up">SignUp</string>
+
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
@@ -127,4 +128,10 @@
     <string name="empty_qr_code">Vous n\'avez pas encore de QR code, veuillez vous inscrire</string>
     <string name="full_qr_code">Votre QR code</string>
 
+    <!-- Strings for how to connect page -->
+    <string name="main_title_how_to_connect">Comment se connecter ?</string>
+    <string name="sub_title_how_to_connect">Afin de jumeler votre smartphone à un SmartFridge : </string>
+    <string name="it_must">Il faut : </string>
+    <string name="first_subtitle_how_to_connect"> - Présenter le QR code ci-dessous devant le scanner de votre boîtier Smartfridge. </string>
+    <string name="it_must_step">Cette étape est indispensable afin que l\'application soit connectée à votre boîtier.</string>
 </resources>
