--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -130,7 +130,7 @@
     <string name="sign_out">Se déconnecter</string>
     <string name="new_raspberry">Nouveau scanneur</string>
     <string name="content_description_qr">Ajouter un scanneur grâce à ce qr-code</string>
-    <string name="new_location">Ajouter un Emplacement</string>
+    <string name="new_location">Modifier Emplacements</string>
 
     <!-- raspberry popup -->
     <string name="raspberry_popup_title">Nouveau Scanneur Détecté</string>
@@ -141,6 +141,7 @@
     <string name="raspberry_popup_new_location">Nouvel emplacement</string>
     <string name="raspberry_popup_save">Enregistrer</string>
     <string name="raspberry_popup_discard">Supprimmer</string>
+    <string name="raspberry_popup_hint">Nouvel emplacement</string>
 
     <!-- Strings for how to connect page -->
     <string name="main_title_how_to_connect">Comment se connecter ?</string>
