EDIT : how to connect responsiveness
With this commit, the responsiveness of the how to connect page has been improved. This means that the page is now suited for smaller screens.

--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -163,4 +163,7 @@
     <string name="product_expiration_period_hint">Product expiration period hint</string>
     <string name="image_de_thermom_tre">Image de thermomètre</string>
     <string name="image_d_humidit">Image d\'humidité</string>
+    <string name="logo_de_l_application">Logo de l\'application</string>
+    <string name="qr_code_qu_il_faut_scanner">QR-code qu\'il faut scanner</string>
+    <string name="image_de_description">Image de description</string>
 </resources>
