EDIT : sign up page responsiveness
With this commit, the sign up page responsiveness has been imporved. This means the page will be suited for small as well as for big screens.

--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -166,4 +166,6 @@
     <string name="logo_de_l_application">Logo de l\'application</string>
     <string name="qr_code_qu_il_faut_scanner">QR-code qu\'il faut scanner</string>
     <string name="image_de_description">Image de description</string>
+    <string name="j_accepte_avoir_lu_et_accepter_les">J\'accepte avoir lu et accepter les</string>
+    <string name="termes_d_utilisation">termes d\'utilisation</string>
 </resources>
