EDIT : app responsiveness
With this pull request, the overall app responsiveness has been largely improved.

--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -168,4 +168,5 @@
     <string name="image_de_description">Image de description</string>
     <string name="j_accepte_avoir_lu_et_accepter_les">J\'accepte avoir lu et accepter les</string>
     <string name="termes_d_utilisation">termes d\'utilisation</string>
+    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
 </resources>
