EDIT : change title and logo of the app

--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">SmartFridge</string>
+
     <!-- Navigation bar -->
     <string name="bottom_home_item">Accueil</string>
     <string name="bottom_list_item">Produits</string>
